--- a/fronted/components/PredictionForm.css
+++ b/fronted/components/PredictionForm.css
@@ -1,62 +1,80 @@
+/* PredictionForm.css */
+
 .prediction-form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; /* Ajusta la altura para ocupar toda la pantalla verticalmente */
-  }
-  
-  .prediction-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    max-width: 400px;
-    width: 100%;
-  }
-  
-  .prediction-form label {
-    margin-bottom: 10px;
-  }
-  
-  .prediction-form input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .prediction-form button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .prediction-form button:hover {
-    background-color: #0056b3;
-  }
-  
-  .error {
-    color: red;
-    margin-top: 10px;
-  }
-  
-  .predictions {
-    text-align: center;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
-  }
-  
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #E0F7FA; /* Celeste claro */
+  border: 1px solid #B2EBF2; /* Borde azul claro */
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
+
+.prediction-form {
+  background-color: #C8E6C9; /* Verde claro */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+}
+
+.form-title {
+  color: #004D40; /* Verde oscuro */
+  margin-bottom: 10px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  font-size: 18px;
+  color: #004D40; /* Verde oscuro */
+}
+
+.form-group input[type="text"] {
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  max-width: 300px;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #004D40; /* Verde oscuro */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #00251A; /* Verde oscuro más oscuro */
+}
+
+.error {
+  color: #B71C1C; /* Rojo oscuro */
+  margin-top: 10px;
+}
+
+.predictions {
+  margin-top: 20px;
+}
+
+.predictions h3 {
+  font-size: 20px;
+  color: #004D40; /* Verde oscuro */
+  margin-bottom: 10px;
+}
+
+.predictions p {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.no-data {
+  font-size: 16px;
+  font-style: italic;
+  color: #777;
+}
